# python-practice-projects

./: .gitignore  README.md  preparing-env.md  preparing-env.txt  requirements.txt
1.requests/1/: main.py
1.requests/1.requests-basics/: main.py
10.fastapi/1.fastapi-basics/: .env.example  blog.db
11.sqlmodel/1.sqlmodel-basics/: alembic_sqlmodel_setup.md  main.py  notes.md  pyproject.toml
11.sqlmodel/1.sqlmodel-basics/alembic/: env.py
11.sqlmodel/1.sqlmodel-basics/alembic/versions/: 07b8d9718bca_add_secret_name_field_to_users.py  539e3a7b0568_add_age_to_users.py  8cd55adb6fb2_make_age_nullable.py  d3b2b688f9b0_init.py
11.sqlmodel/1.sqlmodel-basics/app/: database.py  models.py
11.sqlmodel/1.sqlmodel-basics/app/api/: users.py
11.sqlmodel/1.sqlmodel-basics/app/models/: user.py
11.sqlmodel/1.sqlmodel-basics/app/routers/: users.py
11.sqlmodel/1.sqlmodel-basics/app/schemas/: user_schema.py
12.django/: notes.txt
12.django/1.worldtour/: db.sqlite3
2.jupyter/1.jupyter-basics/: README.md  main.ipynb
3.json/1.json-basics/: README.md  main.ipynb  requirements.txt
3.json/2.live-currency-converter/: README.md  main.py
4.csv/1.csv-basics/: README.md  main.ipynb  new_names.csv  requirements.txt
5.pandas/1.pandas-basics/: 1.series.ipynb  2.dataframes.ipynb  3.dataframes.ipynb  4.dataframes.ipynb  requirements.txt
5.pandas/2.pandas-basics/: 1.basics.ipynb  2.basics.ipynb  requirements.txt  users.csv  users.json
common-errors/: jupyter-kernel-not-showing.md
instructions/: alembic_sqlalchemy_setup.md
notes/: .alembic_sqlmodel_setup.md.swp
(+288 files in other folders)
